# SandBox

./: CMakeLists.txt  CMakeLists.txt.gtest  CMakeSettings.json
App/: CMakeLists.txt  SandBox.cpp
App/src/: SandBox.cpp
Common/: CMakeLists.txt  DynamicLibrary.h  FormatBuffer.cpp  FormatBuffer.h  SbCommonConfig.cmake.in  ScopeGuard.h
Common/Sys/Windows/: WindowsDynamicLibrary.h  WindowsErrorFormat.cpp  WindowsErrorFormat.h
Common/include/SbCommon/: DynamicLibrary.h  FixedString.h  Format.h  Format2.h  Format3.h  FormatBuffer.h  ScopeGuard.h  StringConversion.h
Common/src/: FormatBuffer.cpp  StringConversion.cpp
Common/test/: CMakeLists.txt
Common/test/src/: FixedStringTest.cpp  Format2Test.cpp  Format3Test.cpp  FormatBufferTest.cpp  FormatTest.cpp  FormatTest.h  StringConversionTest.cpp
Core/: App.cpp  App.h  AppConfiguration.cpp  AppConfiguration.h  AppWindow.cpp  CMakeLists.txt
Core/include/SbCore/: App.h  AppConfiguration.h  AppFileSystem.h  AppLoggerFactory.h  AppWindow.h
Core/src/: App.cpp  AppConfiguration.cpp  AppFileSystem.cpp  AppLoggerFactory.cpp  AppWindow.cpp
Core/test/: CMakeLists.txt
Core/test/src/: AppConfigurationTest.cpp
Game/: CMakeLists.txt
Game/src/: Game.cpp
Game/test/: CMakeLists.txt
Math/: CMakeLists.txt  Matrix4D.cpp  Matrix4D.h  Radians.h  Vector3D.h
Math/include/SbMath/: Constants.h  Matrix4D.h  Radians.h  Vector3D.h
Math/src/: Matrix4D.cpp
Math/test/: CMakeLists.txt
Math/test/src/: Matrix4DTest.cpp  RadiansTest.cpp  Vector3DTest.cpp
Pal/: CMakeLists.txt
Pal/include/SbPal/: DynamicLibrary.h  Pal.h
Pal/src/Windows/: DynamicLibrary.cpp  WindowsErrorFormat.cpp  WindowsPal.cpp
Pal/test/: CMakeLists.txt
Pal/test/src/Windows/: WindowsErrorFormatTest.cpp
Spi/: CMakeLists.txt  PersistedConfiguration.h
Spi/include/SbSpi/: Allocator.h  DelegatingWindowEvents.h  FileSystem.h  Game.h  Host.h  Logger.h  NonCopyable.h  PersistedConfiguration.h  ProgramArguments.h  PublicVariables.h  SharedObject.h  WindowEvents.h
Spi/src/: DefaultLogger.cpp  DelegatingWindowEvents.cpp  Logger.cpp  PersistedConfiguration.cpp  Spi.cpp
Spi/test/: CMakeLists.txt
Spi/test/src/: FileSystemTest.cpp  LoggerTest.cpp  PersistedConfigurationTest.cpp  SharedObjectTest.cpp
Test/: CMakeLists.txt  FormatBufferTest.cpp  Matrix4DTest.cpp  PersistedConfigurationTest.cpp  RadiansTest.cpp  Vector3DTest.cpp
WinTest/: CMakeLists.txt  WindowsErrorFormatTest.cpp
Windows/: CMakeLists.txt
Windows/include/SbWindows/: DynamicLibrary.h  WindowsDynamicLibrary.h  WindowsErrorFormat.h  WindowsPal.h
Windows/src/: DynamicLibrary.cpp  WindowsDynamicLibrary.cpp  WindowsErrorFormat.cpp  WindowsPal.cpp
Windows/test/: CMakeLists.txt
Windows/test/src/: WindowsErrorFormatTest.cpp
cmake/Modules/: __Findglfw3.cmake__
